# cmake_template

./: CMakeLists.txt  README.md
bin_project/: CMakeLists.txt
bin_project/src/: func.cpp  main.cpp
include/: func.h
lib_static_project/: CMakeLists.txt
lib_static_project/include/: func2.h
lib_static_project/output/include/: static_func.h
lib_static_project/src/: func2.cpp  static_func.cpp
src/: main.cpp
